--- a/src/geo/sample/config.ini
+++ b/src/geo/sample/config.ini
@@ -79,9 +79,13 @@ rpc_call_header_format = NET_HDR_DSN
 rpc_call_channel = RPC_CHANNEL_TCP
 rpc_timeout_milliseconds = 5000
 
-[uri-resolver.dsn://onebox]
+;[uri-resolver.dsn://onebox]
+;factory = partition_resolver_simple
+;arguments = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
+
+[uri-resolver.dsn://tjwqtst-staging]
 factory = partition_resolver_simple
-arguments = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
+arguments = 10.38.166.18:31601,10.38.162.231:31601
 
 [geo_client.lib]
 max_level = 16
