--- a/src/redis_protocol/proxy/config.ini
+++ b/src/redis_protocol/proxy/config.ini
@@ -9,6 +9,7 @@ count = 1
 name = proxy
 type = proxy
 arguments = redis_cluster temp temp_geo
+;arguments = tjwqtst-staging cell_position cell_position_geo
 ports = 6379
 pools = THREAD_POOL_DEFAULT, THREAD_POOL_PROXY_SERVER, THREAD_POOL_GEO
 run = true
@@ -124,3 +125,7 @@ allow_inline = true
 [uri-resolver.dsn://redis_cluster]
 factory = partition_resolver_simple
 arguments = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
+
+;[uri-resolver.dsn://tjwqtst-staging]
+;factory = partition_resolver_simple
+;arguments = 10.38.166.18:31601,10.38.162.231:31601
