--- a/src/geo/bench/config.ini
+++ b/src/geo/bench/config.ini
@@ -8,7 +8,7 @@ count = 1
 [apps.mimic]
 type = dsn.app.mimic
 arguments =
-pools = THREAD_POOL_DEFAULT, THREAD_POOL_GEO
+pools = THREAD_POOL_DEFAULT, THREAD_POOL_GEO, THREAD_POOL_GEO_BENCH
 run = true
 count = 1
 
@@ -70,6 +70,13 @@ max_input_queue_length = 1024
 worker_priority = THREAD_xPRIORITY_NORMAL
 worker_count = 4
 
+[threadpool.THREAD_POOL_GEO_BENCH]
+name = default
+partitioned = false
+max_input_queue_length = 1024
+worker_priority = THREAD_xPRIORITY_NORMAL
+worker_count = 8
+
 [task..default]
 is_trace = false
 is_profile = false
@@ -79,9 +86,9 @@ rpc_call_header_format = NET_HDR_DSN
 rpc_call_channel = RPC_CHANNEL_TCP
 rpc_timeout_milliseconds = 5000
 
-[uri-resolver.dsn://onebox]
-factory = partition_resolver_simple
-arguments = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
+;[uri-resolver.dsn://onebox]
+;factory = partition_resolver_simple
+;arguments = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
 
 [geo_client.lib]
 max_level = 16
