--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 include("${DSN_ROOT}/bin/dsn.cmake")
 
 set(DSN_BUILD_RUNTIME FALSE)
-add_definitions(-DGTEST_HAS_TR1_TUPLE=0 -DGTEST_USE_OWN_TR1_TUPLE=0)
+add_definitions(-DGTEST_HAS_TR1_TUPLE=0 -DGTEST_USE_OWN_TR1_TUPLE=0 -DABSL_MIN_LOG_LEVEL=1)
 dsn_common_setup()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
