move pegasus_bench from rocksdb dir to pegasus dir

--- a/src/test/bench_test/config.ini
+++ b/src/test/bench_test/config.ini
@@ -65,5 +65,4 @@ worker_count = 10
 
 [uri-resolver.dsn://mycluster]
 factory = partition_resolver_simple
-arguments = 127.0.0.1:34601
-
+arguments = @CLUSTER@
