--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(test/function_test)
 add_subdirectory(test/kill_test)
 add_subdirectory(test/upgrade_test)
 add_subdirectory(test/pressure_test)
+add_subdirectory(test/bench_test)
